versioned_docs/version-5.3.0/api/2_capi/authentication/resetemailpassword.md
# ResetEmailPassword
Reset email password.

<PartialServop service_name="authenticationV2" operation_name="RESET_EMAIL_PASSWORD" />

## Method Parameters
Parameter | Description
--------- | -----------
externalId | The email address to send the reset email to.

## Usage

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="csharp" label="C#">
```

```csharp
string externalId = "email@email.com";

SuccessCallback successCallback = (response, cbObject) =>
{
    Debug.Log(string.Format("Success | {0}", response));
};
FailureCallback failureCallback = (status, code, error, cbObject) =>
{
    Debug.Log(string.Format("Failed | {0}  {1}  {2}", status, code, error));
};

<%= data.branding.codePrefix %>.Authenticationv2Service.ResetEmailPassword(externalId, successCallback, failureCallback);
```

```mdx-code-block
</TabItem>
<TabItem value="cpp" label="C++">
```

```cpp
const char *externalId = "email@email.com";
<%= data.branding.codePrefix %>.getAuthenticationv2Service().resetEmailPassword(externalId, this);
```

```mdx-code-block
</TabItem>
<TabItem value="objectivec" label="Objective-C">
```

```objectivec
NSString *externalId = @"email@email.com";
BCCompletionBlock successBlock; // define callback
BCErrorCompletionBlock failureBlock; // define callback
[[<%= data.branding.codePrefix %> authenticationV2Service] ResetEmailPassword:
                   externalId:externalId
              completionBlock:successBlock
         errorCompletionBlock:failureBlock
                     cbObject:nil]
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
String externalId = "email@email.com";
this; // implements IServerCallback
<%= data.branding.codePrefix %>.getAuthenticationv2Service.ResetEmailPassword(externalId, this);

public void serverCallback(ServiceName serviceName, ServiceOperation serviceOperation, JSONObject jsonData)
{
    System.out.print(String.format("Success | %s", jsonData.toString()));
}
public void serverError(ServiceName serviceName, ServiceOperation serviceOperation, int statusCode, int reasonCode, String jsonError)
{
    System.out.print(String.format("Failed | %d %d %s", statusCode,  reasonCode, jsonError.toString()));
}

```

```mdx-code-block
</TabItem>
<TabItem value="js" label="JavaScript">
```

```javascript
var externalId = "email@email.com";
<%= data.branding.codePrefix %>.authenticationV2.ResetEmailPassword(externalId, result =>
{
  var status = result.status;
  console.log(status + " : " + JSON.stringify(result, null, 2));
});
```

```mdx-code-block
</TabItem>
<TabItem value="cfs" label="Cloud Code">
```

```cfscript
var externalId = "email@email.com";
var authenticationV2Proxy = bridge.getAuthenticationv2ServiceProxy();

var postResult = authenticationV2Proxy.ResetEmailPassword(externalId);
```

```mdx-code-block
</TabItem>
<TabItem value="r" label="Raw">
```

```r
{
    "service":"authenticationV2",
    "operation":"RESET_EMAIL_PASSWORD",
    "data":{
        "appId":"$gameId",
        "externalId":"email@email.com"
    }
}
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```
<details>
<summary>JSON Response</summary>

```json
{
  "status" : 200,
  "data" : null
}
```

</details>

